--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ body {
     color: white;
     font-weight: bold;
     cursor: pointer;
+    transition: transform 0.5s ease;
+    text-decoration: solid underline #ed750d;
 }
 .logo-section h2:hover{
     transform: scale(1.1);
@@ -136,6 +138,7 @@ header img {
     border-radius: 12px;
     border: 1px solid #0078d7;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+    height: 782px;
 }
 .container h3 {
     text-align: center;
@@ -227,6 +230,8 @@ button[type="submit"]:hover {
 }
 .form-group {
     margin-bottom: 1.7rem;
+    height: ;
+    
 }
 footer {
     background-color: rgba(0, 0, 0, 0.7);
